--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,16 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
-  http: ^1.3.0  # Update to the latest version
-  provider: ^6.0.5  # For state management
-  cupertino_icons: ^1.0.8  # For iOS style icons
+  http: ^1.3.0
+  provider: ^6.0.5
+  cupertino_icons: ^1.0.8
   google_generative_ai: ^0.0.1-dev
   file_picker:
     git:
       url: https://github.com/miguelpruivo/flutter_file_picker.git
-  open_file: ^3.3.2    # Opens files like PDFs
+  open_file: ^3.3.2
   flutter_spinkit: ^5.2.0
-  speech_to_text: ^6.4.0
-
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,3 +48,5 @@ flutter:
     - assets/robot_bg3.jpg
     - assets/robot_bg4.jpg
     - assets/profile_bg.jpg
+
+
