--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   open_file: ^3.3.2
   flutter_spinkit: ^5.2.0
   speech_to_text: ^7.0.0
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
 
 dev_dependencies:
   flutter_test:
